--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fancyapps/ui": "^6.0.18",
+    "@supabase/supabase-js": "^2.53.0",
     "@tailwindcss/cli": "^4.1.10",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "motion": "^12.19.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "react-spinners": "^0.17.0",
+    "sass": "^1.89.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
